added in react, angular compatibility created button component

--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@analogjs/astro-angular": "^0.2.0-beta.3",
+    "@angular-devkit/build-angular": "^16.0.0-rc.0",
+    "@angular/animations": "^16.0.0-rc.0",
+    "@angular/common": "^16.0.0-rc.0",
+    "@angular/compiler": "^16.0.0-rc.0",
+    "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@angular/core": "^16.0.0-rc.0",
+    "@angular/language-service": "^16.0.0-rc.0",
+    "@angular/platform-browser": "^16.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
+    "@angular/platform-server": "^16.0.0-rc.0",
+    "@astrojs/react": "^2.1.2",
     "@astrojs/tailwind": "^3.1.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "astro": "^2.3.3",
-    "tailwindcss": "^3.3.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.5.0",
+    "zone.js": "^0.13.0"
   }
 }
